# character-agent-integration

./: .coveragerc  CHARTER.md  DOCKSIDE-EXAM.md  EXTRACTION_SUMMARY.md  MANIFEST.in  README.md  TEST_SUITE_COMPLETION_REPORT.md  TEST_SUITE_STRUCTURE.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  verify_tests.py
.github/workflows/: publish.yml  test.yml  validate.yml
character_agent_integration/: __init__.py  integration.py
character_agent_integration/agent/: __init__.py  base.py  roles.py
character_agent_integration/emotion/: __init__.py  intelligence.py  response.py  state.py
character_agent_integration/memory/: __init__.py  context.py  decisions.py  retrieval.py
character_agent_integration/personality/: __init__.py  development.py  influence.py  learning.py
examples/: all_roles.py  basic_usage.py  personality_variation.py
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  run_tests.sh  test_agent_roles.py  test_emotion_intelligence.py  test_integration.py  test_memory_decisions.py  test_personality_learning.py
